--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Candidate/Candidate.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Candidate/Candidate.cshtml
@@ -129,13 +129,19 @@
         <span class="counter">@(currentPage - 1) of @totalNumberOfPages</span>
     </a>
 
+@using (Html.BeginRouteForm(RecruitmentRouteNames.SortCandidate))
+{
+    @Html.HiddenFor(m => m.CandidateApplicationsSearch.CandidateGuid)
+    @Html.HiddenFor(m => m.CandidateApplicationsSearch.OrderByField)
+    @Html.HiddenFor(m => m.CandidateApplicationsSearch.Order)
     <div id="page-size-container" class="grid grid-1-3 page-navigation__btn" style="width: 33.333333333%; text-align: center">
         <label for="page-size" class="heading-small inline">Display results</label>
-        @Html.DropDownListFor(m => m.CandidateApplicationsSearch.PageSize, Model.CandidateApplicationsSearch.PageSizes, new { id = "page-size" })
+        @Html.DropDownListFor(m => m.CandidateApplicationsSearch.PageSize, Model.CandidateApplicationsSearch.PageSizes, new {id = "page-size"})
         <noscript>
             <button class="button" name="SearchVacanciesAction" value="SearchVacancies">View</button>
         </noscript>
     </div>
+}
 
     <a href="@nextLink"
        style="visibility: @(currentPage == totalNumberOfPages ? "hidden" : "visible"); width: 33.333333333%"
@@ -151,6 +157,6 @@
 {
     @Scripts.Render("~/bundles/vacancyApplications")
     <script>
-        var searchUrl = '@Url.RouteUrl(RecruitmentRouteNames.ViewCandidate)';
+        var searchUrl = '@Url.RouteUrl(RecruitmentRouteNames.SortCandidate)';
     </script>
 }
