--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Application/VacancyApplications.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Application/VacancyApplications.cshtml
@@ -206,7 +206,7 @@
                 </ul>
             </section>
 
-            @{ var open = Model.VacancyApplicationsSearch.IsCandidateSearch() ? "" : "open"; }
+            @{ var open = Model.VacancyApplicationsSearch.IsCandidateSearch() ? "open" : ""; }
             <details class="@open" @open>
                 <summary>Search candidates</summary>
                 <div class="detail-content">
