RA-214: Updated copy on training details page for contact section

--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/TrainingDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/TrainingDetails.cshtml
@@ -184,6 +184,7 @@
 
     <div class="form-group">
         <h3 class="heading-small">Contact details</h3>
+        <p>If you would like candidates to be able to contact you about this vacancy, fill in this section</p>
 
         @Html.FormTextFor(
             m => m.ContactName,
