Added status enum for future expansion of the status page

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/InformationRadiator/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/InformationRadiator/Index.cshtml
@@ -8,5 +8,5 @@
 
 <dl>
     <dt>Database Status</dt>
-    <dd>@(Model.DatabaseError ? "Exception" : Model.DatabaseSuccess ? "Success" : "Warning")</dd>
+    <dd>@(Model.DatabaseStatus.ToString())</dd>
 </dl>
