Switched to ul layout for easier checks from azure

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/InformationRadiator/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/InformationRadiator/Index.cshtml
@@ -1,12 +1,11 @@
 ﻿@model SFA.Apprenticeships.Web.Recruit.ViewModels.InformationRadiatorViewModel
 
 @{
-    
+
 }
 
-<h1>Service Status</h1>
+<h1 class="heading-xlarge">Service Status</h1>
 
-<dl>
-    <dt>Database Status</dt>
-    <dd>@(Model.DatabaseStatus.ToString())</dd>
-</dl>
+<ul>
+    <li>Database: @(Model.DatabaseStatus.ToString())</li>
+</ul>
