--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/VacancyPreviewHeader.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/VacancyPreviewHeader.cshtml
@@ -4,6 +4,7 @@
 @using SFA.Apprenticeships.Infrastructure.Presentation
 @using SFA.Apprenticeships.Web.Raa.Common.Extensions
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy
+@using HtmlExtensions = SFA.Apprenticeships.Web.Common.Framework.HtmlExtensions
 
 @{
     var editableItemClass = Model.IsEditable ? "editable-item" : "";
@@ -30,7 +31,7 @@
         <div class="grid grid-2-3" style="clear: left">
             <div class="hgroup text @editableItemClass">
                 <h1 class="heading-xlarge" id="vacancy-title" itemprop="title">
-                    @Model.VacancyType.GetTitle(Model.NewVacancyViewModel.Title)
+                    @SFA.Apprenticeships.Web.Common.Framework.HtmlExtensions.HtmlRawEscaped(Html.Raw(Model.VacancyType.GetTitle(Model.NewVacancyViewModel.Title)))
                     @Html.Partial(CommentViewModel.PartialIconView, Html.GetCommentViewModel(Model, m => m.NewVacancyViewModel.Title, Model.NewVacancyViewModel.TitleComment, Model.BasicDetailsLink))
                 </h1>
                 <p class="subtitle" id="vacancy-subtitle-employer-name" itemprop="hiringOrganization">@Model.NewVacancyViewModel.OwnerParty.Employer.Name</p>
@@ -57,7 +58,7 @@
                         @Html.Partial(CommentViewModel.PartialIconView, Html.GetCommentViewModel(Model, m => m.NewVacancyViewModel.ShortDescription, Model.NewVacancyViewModel.ShortDescriptionComment, Model.BasicDetailsLink))
                     </h3>
                     <div class="text" itemprop="description">
-                        <p id="vacancy-description" class="@Model.NewVacancyViewModel.ShortDescription.GetPreserveFormattingCssClass()">@Model.NewVacancyViewModel.ShortDescription</p>
+                        <p id="vacancy-description" class="@Model.NewVacancyViewModel.ShortDescription.GetPreserveFormattingCssClass()">@HtmlExtensions.HtmlRawEscaped(Html.Raw(Model.NewVacancyViewModel.ShortDescription))</p>
                         @Html.Partial(ApplicationsLinkViewModel.PartialView, new ApplicationsLinkViewModel(Model.VacancyType, Model.VacancyReferenceNumber, Model.ApplicationCount))
                     </div>
                     @Html.Partial(EditLinkViewModel.PartialView, Html.GetEditLinkViewModel(Model, m => m.NewVacancyViewModel.ShortDescription, Model.BasicDetailsLink, Model.NewVacancyViewModel.ShortDescriptionComment))
