Fixing broken links resulting from candidate search

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Candidate/Candidate.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Candidate/Candidate.cshtml
@@ -103,7 +103,7 @@
                     @Html.Partial("_applicationStatus", applicationSummary.Status)
                 </td>
                 <td>
-                    <a href="@Url.RouteUrl(applicationSummary.VacancyType == VacancyType.Traineeship ? RecruitmentRouteNames.ReviewTraineeshipApplication : RecruitmentRouteNames.ReviewApprenticeshipApplication, new ApplicationSelectionViewModel(applicationSummary.ApplicationId).RouteValues)" title="View @applicationSummary.VacancyTitle application">View application</a><br/>
+                    <a href="@Url.RouteUrl(applicationSummary.VacancyType == VacancyType.Traineeship ? RecruitmentRouteNames.ReviewTraineeshipApplication : RecruitmentRouteNames.ReviewApprenticeshipApplication, new ApplicationSelectionViewModel(applicationSummary.ApplicationId, applicationSummary.VacancyReferenceNumber).RouteValues)" title="View @applicationSummary.VacancyTitle application">View application</a><br/>
                     <a href="@Url.RouteUrl(applicationSummary.VacancyType == VacancyType.Traineeship ? RecruitmentRouteNames.ViewAnonymousTraineeshipApplication : RecruitmentRouteNames.ViewAnonymousApprenticeshipApplication, new {application = applicationSummary.AnonymousLinkData})" title="View anonymous application">Anonymous view</a>
                 </td>
             </tr>
